Changelog for skalibs.

In 2.14.0.0
-----------

 - Bugfixes.
 - New accessor function: selfpipe_fd().
 - New functions: slurpn(), openslurpnclose().
 - slurp() and openslurpclose() are now macros.
 - New strerr macros to warn with a "fatal" message.
 - New cdb functions: cdb_hashv(), cdbmake_addv().
 - child_spawn() revamp. Prototype change (last arg is a size_t).


In 2.13.1.1
-----------

 - Bugfixes.


In 2.13.1.0
-----------

 - New macro: SKALIBS_PATH_MAX, in posixishard.h.
Defined to 4096 on systems that do not define PATH_MAX.
 - New function: sals().


In 2.13.0.0
-----------

 - Bugfixes.
 - New functions: buffer_timed_put(), buffer_timed_puts().
 - strerr.h revamped. strerr_die, strerr_warn, strerr_diesys, strerr_warnsys
and all the previous strerr2 macros are now __VA_ARGS__ macros around
strerr_diev() and friends.


In 2.12.0.1
-----------

 - Bugfixes.


In 2.12.0.0
-----------

 - librandom revamped (again).
   * random_init() and random_finish() removed.
   * random_char() removed.
   * random_string() renamed to random_buf().
   * early versions added.
 - New djbunix functions: waitn_posix(), waitn_reap_posix().
 - readnclose() made public, now doesn't touch errno on success.
 - openreadnclose_at() now returns a ssize_t.


In 2.11.2.0
-----------

 - Bugfixes.
 - User-provided CPPFLAGS, CFLAGS and LDFLAGS are now honored in
    sysdep autodetection.
 - envdir_internal() now supports a SKALIBS_ENVDIR_NOCLAMP option, for
    unlimited-size variable reading.


In 2.11.1.0
-----------

 - fd_close() doesn't retry if close() fails. (i.e. adapts to Linux's
behaviour over HP-UX's.)
 - New function: opendir_at.


In 2.11.0.0
-----------

 - libbiguint removed.
 - Obsolete skalibs/environ.h and skalibs/getpeereid.h removed.
 - rc4 and md5 removed.
 - iobuffer removed.
 - fd_cat and fd_catn changed signatures.
 - All *_t types renamed to avoid treading on POSIX namespace.
 - subgetopt() renamed to lgetopt().