@@ -26,6 +26,9 @@
  <li> New cdb functions: <tt>cdb_hashv()</tt>, <tt>cdbmake_addv()</tt> </li>
  <li> New <tt>cspawn</tt> function, for posix_spawn/fork unification </li>
  <li> <tt>child_spawn</tt> functions are now declared in <tt>cspawn.h</tt> </li>
+ <li> <tt>case_lowerb() and friends now use ctype.h functions, supporting locale
+if it is declared in the application. </li>
+ <li> <tt>case_str()</tt> removed, strcasestr() fallback implementation added </li>
 </ul>
 
 <h2> in 2.13.1.1 </h2>
