@@ -2,6 +2,7 @@
 
 #include <string.h>
 #include <strings.h>
+
 #include <skalibs/bytestr.h>
 
 int case_startb (char const *s, size_t slen, char const *t)
